// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`exponentiation-operators.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{
  (a)   ** b
}}

=====================================output=====================================
{{ a ** b }}

================================================================================
`;

exports[`in-operators.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{

  ( (a in  (b)))
}}

=====================================output=====================================
{{ a in b }}

================================================================================
`;

exports[`spread-element.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{
  [...   a]
}}

<div [a]="{foo:1, ...bar   }"></div>
<div [a]="{
foo:1, ...bar   }"></div>

{{ foo(a,
...b)}}

=====================================output=====================================
{{ [...a] }}

<div [a]="{ foo: 1, ...bar }"></div>
<div
  [a]="{
    foo: 1,
    ...bar,
  }"
></div>

{{ foo(a, ...b) }}

================================================================================
`;

exports[`tagged-template-literal.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{

  (  (tag \` a \${ b } \\\\u0063 \`))
}}

=====================================output=====================================
{{ tag\` a \${b} \\\\u0063 \` }}

================================================================================
`;

exports[`template-literal.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{

  (  (\` a \${ b } \\\\u0063 \`))
}}

=====================================output=====================================
{{ \` a \${b} \\\\u0063 \` }}

================================================================================
`;

exports[`void-operators.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{

  void   (1 +2)
}}

=====================================output=====================================
{{ void (1 + 2) }}

================================================================================
`;
